# wgpu-demo-with-winit

./: .gitignore  Cargo.toml  LICENSE  README.md
exmaple/entry/: oh-package-lock.json5  oh-package.json5
exmaple/entry/src/main/cpp/: CMakeLists.txt
exmaple/entry/src/main/ets/entryability/: EntryAbility.ets
src/: app.rs  graphics.rs  lib.rs
